# video-processor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  GITHUB_SETUP.md  PUBLISHING_SUMMARY.md  README.md  REQUIREMENTS.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/video_processor/: __init__.py  cli.py  config.py  engine.py  ffmpeg.py  logging.py
src/video_processor/gui/: __init__.py  app.py  extensions_view.py  models.py  progress_view.py  settings_view.py  theme.py
tests/: test_config.py  test_ffmpeg.py
